--- a/index.html
+++ b/index.html
@@ -29,30 +29,41 @@
         <div class="container-fluid bg-light">
 
             <div class="container bg-light ">
-                <ul class="navbar mb-1">
-                    <li class="navbar-item" style="margin-right: 180px;">
+                <div class="row">
+                    <div class="col-sm-3 py-3 px-5 mx-4">
                         <img class="img-fluid" id="img-logo" src="images/logo.png">
-                    </li>
-                    <li class="navbar-item">
-                        <a class="navbar-link" href="#">Home</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a class="navbar-link" href="#">Who We Are</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a class="navbar-link" href="#">Services</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a class="navbar-link" href="#">Packages</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a class="navbar-link" href="#">Blog</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="#" class="btn" id="btn-book-ap" style="width: 210px; border-bottom: none;"> Book an
-                            Appointment</a>
-                    </li>
-                </ul>
+                    </div>
+                    <div class="col-sm-8 py-3 ps-5 pe-0">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#colNav">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="colNav">
+                                <ul class="navbar mt-2 ms-5 px-2">
+                                    <li class="navbar-item pe-3">
+                                        <a class="navbar-link" href="#">Home</a>
+                                    </li>
+                                    <li class="navbar-item pe-3">
+                                        <a class="navbar-link" href="#">Who We Are</a>
+                                    </li>
+                                    <li class="navbar-item pe-3">
+                                        <a class="navbar-link" href="#">Services</a>
+                                    </li>
+                                    <li class="navbar-item pe-3">
+                                        <a class="navbar-link" href="#">Packages</a>
+                                    </li>
+                                    <li class="navbar-item pe-3">
+                                        <a class="navbar-link" href="#">Blog</a>
+                                    </li>
+                                    <li class="navbar-item pe-0">
+                                        <a href="#" class="btn" id="btn-book-ap"
+                                            style="width: 210px; border-bottom: none;">
+                                            Book an
+                                            Appointment</a>
+                                    </li>
+                                </ul>
+                            </div>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -511,32 +522,34 @@
         </div>
     </div>
     <div class="container-fluid" style="background-color:rgb(11, 9, 46) ;">
-        <div class="container">
+        <div class="container pt-5 pb-0">
             <div class="row text-light">
-                <div class="col-sm-3 py-4">
+                <div class="col-sm-3 pt-4 pb-2">
                     <img class="img-fluid" id="img-logo" src="images/logo-end.png">
                 </div>
-                <div class="col-sm-3 py-4 px-5">
+                <div class="col-sm-3 pt-4 pb-2 px-5">
                     <h4 class="heading-end"> Overview</h4>
-                    <p class="page-end-para">We are a team of passionate, creative web designers and result-oriented professionals that aim to
+                    <p class="page-end-para">We are a team of passionate, creative web designers and result-oriented
+                        professionals that aim to
                         deliver cutting-edge web design and development services to fulfill the goals and objectives of
                         our clients.</p>
                 </div>
-                <div class="col-sm-3 py-4 px-5">
+                <div class="col-sm-3 pt-4 pb-2 px-5">
                     <h4 class="heading-end">Useful Links</h4>
                     <ul class="ps-3 page-end-para">
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Web Design</li>
-                        <li>Web Development</li>
-                        <li>Shopify Development</li>
-                        <li>Blog</li>
-                        <li>Contact</li>
+                        <li class="end-link-item"> <a href="#"> Home </a></li>
+                        <li class="end-link-item"> <a href="#"> About </a></li>
+                        <li class="end-link-item"> <a href="#"> Web Design </a></li>
+                        <li class="end-link-item"> <a href="#"> Web Development </a></li>
+                        <li class="end-link-item"> <a href="#"> Shopify Development </a></li>
+                        <li class="end-link-item"> <a href="#"> Blog </a></li>
+                        <li class="end-link-item"> <a href="#"> Contact </a></li>
                     </ul>
                 </div>
-                <div class="col-sm-3 py-4 px-5">
+                <div class="col-sm-3 pt-4 pb-2 px-5">
                     <h4 class="heading-end">Office</h4>
-                    <p class="page-end-para">Plot 733, Sector 82, JLPL Industrial Area, Sahibzada Ajit Singh Nagar, Punjab 140308</p>
+                    <p class="page-end-para">Plot 733, Sector 82, JLPL Industrial Area, Sahibzada Ajit Singh Nagar,
+                        Punjab 140308</p>
                     <p class="page-end-para">Phone: 088470 60027</p>
                 </div>
             </div>
