--- a/index.html
+++ b/index.html
@@ -59,38 +59,38 @@
     </nav> -->
     <!--page1-->
     <nav class="navbar navbar-expand-lg bg-light mx-5 px-5">
-        <div class="container-fluid mx-5 px-5">
-            
-                <a class="navbar-brand " href="#"> <img class="img-fluid" id="img-logo" src="images/logo.png">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse navbar-right" id="navbarText">
-                    <ul class="navbar-nav navbar-center ms-0 mb-2 mb-lg-0 text-end">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Who We Are</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Packages</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
-                        </li>
-                    </ul>
-                    <span class="navbar-text navbar-right">
-                        <a href="#" class="btn" id="btn-book-ap" style="width: 210px; border-bottom: none;">
-                            Book an Appointment</a>
-                    </span>
-                </div>
-            
+        <div class="container-fluid bg-light mx-5 px-5">
+
+            <a class="navbar-brand " href="#"> <img  id="img-logo" src="images/logo.png">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse navbar-right" id="navbarText">
+                <ul class="navbar-nav navbar-center ms-0 mb-2 mb-lg-0 text-end">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Who We Are</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Packages</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                    </li>
+                </ul>
+                <span class="navbar-text navbar-right">
+                    <a href="#" class="btn" id="btn-book-ap" style="width: 210px; border-bottom: none;">
+                        Book an Appointment</a>
+                </span>
+            </div>
+
         </div>
     </nav>
 
