--- a/index.html
+++ b/index.html
@@ -25,50 +25,19 @@
 <body>
 
     <!--navigation-bar-->
-    <!--     <nav class="navbar navbar-expand-md">
-        <div class="container-fluid bg-light">
-            <div class="container bg-light ">       
-                       <img class="img-fluid" id="img-logo" src="images/logo.png">               
-                            <ul class="navbar mt-2 ms-5 px-2">
-                                <li class="navbar-item pe-3">
-                                    <a class="navbar-link" href="#">Home</a>
-                                </li>
-                                <li class="navbar-item pe-3">
-                                    <a class="navbar-link" href="#">Who We Are</a>
-                                </li>
-                                <li class="navbar-item pe-3">
-                                    <a class="navbar-link" href="#">Services</a>
-                                </li>
-                                <li class="navbar-item pe-3">
-                                    <a class="navbar-link" href="#">Packages</a>
-                                </li>
-                                <li class="navbar-item pe-3">
-                                    <a class="navbar-link" href="#">Blog</a>
-                                </li>
-                                <li class="navbar-item pe-0">
-                                    <a href="#" class="btn" id="btn-book-ap" style="width: 210px; border-bottom: none;">
-                                        Book an
-                                        Appointment</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav> -->
-    <!--page1-->
+
     <nav class="navbar navbar-expand-lg bg-light mx-5 px-5">
         <div class="container-fluid bg-light mx-5 px-5">
 
-            <a class="navbar-brand " href="#"> <img  id="img-logo" src="images/logo.png">
+            <a class="navbar-brand " href="#"> <img id="img-logo" src="images/logo.png">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler text-center" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse navbar-right" id="navbarText">
-                <ul class="navbar-nav navbar-center ms-0 mb-2 mb-lg-0 text-end">
+            <div class="collapse navbar-collapse text-center me-auto" id="navbarText">
+                <ul class="navbar-nav  ms-0 mb-2 mb-lg-0 text-end">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Home</a>
                     </li>
@@ -85,8 +54,8 @@
                         <a class="nav-link" href="#">Blog</a>
                     </li>
                 </ul>
-                <span class="navbar-text navbar-right">
-                    <a href="#" class="btn" id="btn-book-ap" style="width: 210px; border-bottom: none;">
+                <span class="navbar-text navbar-center">
+                    <a href="#" class="btn mx-auto" id="btn-book-ap" style="width: 210px; border-bottom: none;">
                         Book an Appointment</a>
                 </span>
             </div>
@@ -94,6 +63,7 @@
         </div>
     </nav>
 
+    <!--page1-->
     <div class="container-fluid mt-0 mb-5" id="page1" style="background-color: rgb(11, 9, 46);">
         <div class="container mt-0 mb-5 py-5">
             <div class="container w-75 mt-4 pt-3" id="main-intro-written">
